--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <title>Fuck Off Timer</title>
 
   </head>
   <body>
@@ -12,8 +12,12 @@
 <p id="demo" class="text-center display-2 mt-5 pt-4">
 </p>
 
-
+<div id="fireworks" class="pyro d-none">
+  <div class="before"></div>
+  <div class="after"></div>
 </div>
+</div>
+
   </body>
 </html>
 <!-- 
